# ld53

./: CMakeLists.txt  README.md  index.html
.github/workflows/: pages.yml
data/: ending.ase  tileset.ase  tutorial.ase
scripts/: emcmake
src/: assets.h  main.cpp  main.h  render.cpp  render.h
src/game/: common.cpp  common.h  player.cpp  player.h  room.cpp  room.h
src/web/: input.cpp  input.h  render.cpp  render.h
